# gen_totp

./: .gitignore  README.md  pyproject.toml
gen_totp/: gen_totp.py
gen_totp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_gen_totp.py
