[tool.poetry]
name = "gen_totp"
version = "0.1.0"
description = ""
authors = ["Rafa <rafa@elementai.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
gen_totp = "gen_totp.gen_totp:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
